# ros2_4gewinnt

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/vier_gewinnt/include/vier_gewinnt/vier_gewinnt/action/detail/: rotate_absolute__functions.h  rotate_absolute__rosidl_typesupport_fastrtps_c.h  rotate_absolute__rosidl_typesupport_introspection_c.h  rotate_absolute__rosidl_typesupport_introspection_cpp.hpp  rotate_absolute__struct.h  rotate_absolute__struct.hpp
install/vier_gewinnt/include/vier_gewinnt/vier_gewinnt/msg/: color.h  pose.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
install/vier_gewinnt/include/vier_gewinnt/vier_gewinnt/msg/detail/: color__functions.c  color__functions.h  color__rosidl_typesupport_fastrtps_c.h  color__rosidl_typesupport_fastrtps_cpp.hpp  color__rosidl_typesupport_introspection_cpp.hpp  color__struct.hpp  pose__functions.c  pose__functions.h
install/vier_gewinnt/include/vier_gewinnt/vier_gewinnt/srv/: kill.hpp  set_pen.h  teleport_relative.hpp
install/vier_gewinnt/include/vier_gewinnt/vier_gewinnt/srv/detail/: kill__builder.hpp  kill__functions.c  kill__functions.h  kill__rosidl_typesupport_fastrtps_c.h  kill__rosidl_typesupport_introspection_c.h  kill__traits.hpp  kill__type_support.c  kill__type_support.cpp  kill__type_support.h  set_pen__functions.h  set_pen__rosidl_typesupport_fastrtps_cpp.hpp  set_pen__rosidl_typesupport_introspection_c.h  set_pen__rosidl_typesupport_introspection_cpp.hpp  set_pen__struct.hpp  set_pen__type_support.c  set_pen__type_support.cpp  spawn__rosidl_typesupport_fastrtps_c.h  spawn__rosidl_typesupport_introspection_c.h  spawn__rosidl_typesupport_introspection_cpp.hpp  spawn__struct.h  spawn__type_support.cpp  teleport_absolute__builder.hpp  teleport_absolute__functions.h  teleport_absolute__rosidl_typesupport_introspection_c.h  teleport_absolute__rosidl_typesupport_introspection_cpp.hpp  teleport_absolute__traits.hpp  teleport_relative__builder.hpp  teleport_relative__rosidl_typesupport_fastrtps_c.h  teleport_relative__rosidl_typesupport_fastrtps_cpp.hpp  teleport_relative__traits.hpp  teleport_relative__type_support.cpp
install/vier_gewinnt/lib/vier_gewinnt/: init
install/vier_gewinnt/local/lib/python3.10/dist-packages/vier_gewinnt/: _vier_gewinnt_s.ep.rosidl_typesupport_c.c  _vier_gewinnt_s.ep.rosidl_typesupport_fastrtps_c.c
install/vier_gewinnt/local/lib/python3.10/dist-packages/vier_gewinnt-0.0.0-py3.10.egg-info/: PKG-INFO
install/vier_gewinnt/local/lib/python3.10/dist-packages/vier_gewinnt/action/: _rotate_absolute.py
install/vier_gewinnt/share/ament_index/resource_index/package_run_dependencies/: vier_gewinnt
install/vier_gewinnt/share/vier_gewinnt/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vier_gewinnt/share/vier_gewinnt/cmake/: ament_cmake_export_dependencies-extras.cmake  export_vier_gewinnt__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_vier_gewinnt__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  vier_gewinntConfig.cmake  vier_gewinnt__rosidl_typesupport_cExport-noconfig.cmake  vier_gewinnt__rosidl_typesupport_introspection_cExport.cmake
install/vier_gewinnt/share/vier_gewinnt/msg/: Color.idl  Pose.idl
install/vier_gewinnt/share/vier_gewinnt/srv/: Kill.idl  TeleportRelative.idl
log/: latest_build
vier_gewinnt/: CMakeLists.txt  package.xml
vier_gewinnt/include/vier_gewinnt/: turtle.h  turtle_frame.h
vier_gewinnt/src/: FuerCMAKE.txt  gamecontroller.cpp  gc_pub.cpp  init.cpp  mv.cpp  publisher_member_function.cpp  subscriber_member_function.cpp  test.cpp  turtle.cpp  turtle_frame.cpp  turtlesim.cpp
(+5 files in other folders)
